cmake_minimum_required(VERSION 3.13)
project(Data_Structure_And_Algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Structure_And_Algorithm main.cpp)
add_executable(Coding_Interviews List_Problems.cpp)
add_executable(Stack Stack_And_Queue.cpp)
add_executable(Binary_Tree Binary_Tree.cpp)
add_executable(Function_implement raw_function_implement.cpp)
add_executable(Array_And_String Array_And_String_Problems.cpp)
add_executable(merchant_test merchant_bank_test.cpp)
add_executable(json_parse Json_Parse.cpp Json_Parse.cpp)
add_executable(DP dynamic_programming.cpp)